--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1,6 +1,6 @@
 # COMMONS
 
-sp.common.page.title=Alodiga Services Provider
+sp.common.page.title=CG Turbines
 sp.common.page.home=Inicio
 sp.common.page.invoice=Factura
 sp.common.page.admin.invoice=Administrador de Factura
