--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1193,3 +1193,25 @@ sp.crud.ipBlackList.list= Lista Negra de IP
 sp.crud.ipBlackList.admin= Aministrar Lista Negra de IP
 sp.crud.ipBlackList.exit= Ya existe la Ip
 sp.common.actions.delete= Eliminar IP
+
+#product
+sp.common.PartNumber= Numero de Parte
+sp.common.descripton= Descripcion
+sp.common.amount= Monto 
+sp.common.stockMin=Stock Minimo
+sp.common.stockMax=Stock Maximo
+sp.common.status=Status
+sp.common.actNpNsn=actNpNsn
+sp.common.ubicationBox=Ubicacion de caja
+sp.common.ubicationFolder=Ubicacion de la carpeta
+sp.common.inictialAmount=Monto Inicial
+sp.common.realAmount.product=Monto Real
+sp.common.stockMin=Stock Minimo
+sp.common.stockMax=Stock Maximo
+sp.common.batchNumber=Numero de Batch
+sp.common.amounts.values=Montos
+sp.common.stock=Reserevas
+sp.common.stock.min.error=El stock minimo no puede ser mayor al maximo
+
+
+
