Cambios incoporación de exportación PDF

--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1212,6 +1212,8 @@ sp.common.batchNumber=Numero de Batch
 sp.common.amounts.values=Montos
 sp.common.stock=Reserevas
 sp.common.stock.min.error=El stock minimo no puede ser mayor al maximo
+sp.common.actions.download.pdf=Exportar PDF
+sp.crud.product.list.reporte=Reporte de Productos
 
 
 
