permiso stock product

--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -69,6 +69,8 @@ sp.common.actions.view.payment= Ver Pago
 sp.common.actions.add=Agregar
 sp.common.actions.add.tooltip=Agregar nuevo registro
 sp.common.actions.delete=Eliminar
+sp.common.actions.remove=Egresos
+sp.common.actions.income=Ingresos
 sp.common.actions.save=Guardar
 sp.common.actions.cancel=Cancelar
 sp.common.actions.history=Historicos
@@ -1210,7 +1212,7 @@ sp.common.stockMin=Stock Minimo
 sp.common.stockMax=Stock Maximo
 sp.common.batchNumber=Numero de Batch
 sp.common.amounts.values=Montos
-sp.common.stock=Reserevas
+sp.common.stock=Cantidad
 sp.common.stock.min.error=El stock minimo no puede ser mayor al maximo
 sp.common.actions.download.pdf=Exportar PDF
 sp.crud.product.list.reporte=Reporte de Productos
