--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1221,6 +1221,7 @@ sp.common.date.cure=Fecha de Curado
 sp.common.serials=Seriales
 sp.common.lot=Lote
 sp.common.select=Seleccionar
+sp.common.work.order=Orden de Trabajo
 sp.common.stock.min.error=El stock minimo no puede ser mayor al maximo
 sp.common.actions.download.pdf=Exportar PDF
 sp.crud.product.list.reporte=Reporte de Productos
