--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1225,6 +1225,7 @@ sp.common.work.order=Orden de Trabajo
 sp.common.stock.min.error=El stock minimo no puede ser mayor al maximo
 sp.common.actions.download.pdf=Exportar PDF
 sp.crud.product.list.reporte=Reporte de Productos
+sp.error.value.quantity=La cantidad deber menor o igual al stock
 
 
 
