--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1228,6 +1228,13 @@ sp.crud.product.list.reporte=Reporte de Productos
 sp.error.value.quantity=La cantidad deber menor o igual al stock
 sp.error.validate.transaction=Debe indicar serial y cantidad a egresar
 
+sp.munitoring.expirate=Expirados
+sp.munitoring.expirate.next=Proximos a expirar
+sp.munitoring.expirate.curado=Curado
+sp.munitoring.expirate.min.stock=Stock minimo
+sp.munitoring.expirate.day=Dias para vencer
+sp.munitoring=Monitoreo
+
 
 
 
