editar y eliminar stock

--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1225,6 +1225,9 @@ sp.common.work.order=Orden de Trabajo
 sp.common.stock.min.error=El stock minimo no puede ser mayor al maximo
 sp.common.actions.download.pdf=Exportar PDF
 sp.crud.product.list.reporte=Reporte de Productos
+sp.crud.product.list.stock =Lista de Productos en Stock
+sp.crud.product.detail.stock =Detalle de Producto en Stock 
+sp.common.stock.edit=Editar Stock
 sp.error.value.quantity=La cantidad deber menor o igual al stock
 sp.error.validate.transaction=Debe indicar serial y cantidad a egresar
 
