--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -67,6 +67,7 @@ sp.common.actions.forward=Generar nuevo password y Reenviar Informacion de Cuent
 sp.common.actions.view.detail=Ver Detalle
 sp.common.actions.view.payment= Ver Pago
 sp.common.actions.add=Agregar
+sp.common.actions.egress=Egresar
 sp.common.actions.add.tooltip=Agregar nuevo registro
 sp.common.actions.delete=Eliminar
 sp.common.actions.remove=Egresos
@@ -1094,7 +1095,7 @@ sp.fileExcel.selectedOneFile=Debe selecionar al solo un archivo
 sp.fileExcel.nameProvider=Proveedor
 sp.fileExcel.commission1=Comision
 sp.fileExcel.selectProfile=Seleccione el perfil
-sp.file.commission.topUp.letterHead1=Canal de ventas Multi-Nivel Alodiga
+sp.file.commission.topUp.letterHead1=CG Turbines
 sp.file.commission.topUp.letterHead2=Comisiones de Recarga de moviles nacionales e internacionales
 sp.file.commission.topUp.letterHead3=Alodiga Mejora tu vida
 
@@ -1194,7 +1195,6 @@ sp.common.date.ip=Fecha
 sp.crud.ipBlackList.list= Lista Negra de IP
 sp.crud.ipBlackList.admin= Aministrar Lista Negra de IP
 sp.crud.ipBlackList.exit= Ya existe la Ip
-sp.common.actions.delete= Eliminar IP
 
 #product
 sp.common.PartNumber= Numero de Parte
@@ -1205,7 +1205,7 @@ sp.common.stockMax=Stock Maximo
 sp.common.status=Status
 sp.common.actNpNsn=actNpNsn
 sp.common.ubicationBox=Ubicacion de caja
-sp.common.ubicationFolder=Ubicacion de la carpeta
+sp.common.ubicationFolder=Ubicacion en carpeta
 sp.common.inictialAmount=Monto Inicial
 sp.common.realAmount.product=Monto Real
 sp.common.stock.current=Stock Actual
@@ -1217,17 +1217,46 @@ sp.common.condition=Condicion
 sp.common.customer=Cliente
 sp.common.observations=Observaciones
 sp.common.date.expiration=Fecha de Vencimiento
+sp.common.departure.date=Fecha de Salida
 sp.common.date.cure=Fecha de Curado
 sp.common.serials=Seriales
 sp.common.lot=Lote
 sp.common.select=Seleccionar
 sp.common.work.order=Orden de Trabajo
+sp.common.transit=Transito
+sp.common.quarantine=Cuarentena
+sp.common.wait=Espera
+sp.common.meteorological=Control Meteorologico
 sp.common.stock.min.error=El stock minimo no puede ser mayor al maximo
 sp.common.actions.download.pdf=Exportar PDF
 sp.crud.product.list.reporte=Reporte de Productos
 sp.crud.product.list.stock =Lista de Productos en Stock
 sp.crud.product.detail.stock =Detalle de Producto en Stock 
 sp.common.stock.edit=Editar Stock
+sp.common.stock.add=Agregar Stock
+sp.common.stock.egress=Egresar Stock
+sp.crud.product.list.transit =Lista de Productos en Transito
+sp.crud.product.detail.transit =Detalle de Producto en Transito 
+sp.common.transit.edit=Editar Transito
+sp.common.transit.add=Agregar a Transito
+sp.common.transit.egress=Egresar de Transito
+sp.crud.product.list.quarantine =Lista de Productos en Cuarentena
+sp.crud.product.detail.quarantine =Detalle de Producto en Cuarentena 
+sp.common.quarantine.edit=Editar Cuarentena
+sp.common.quarantine.add=Agregar a Cuarentena
+sp.common.quarantine.egress=Egresar de Cuarentena
+sp.crud.product.list.wait =Lista de Productos en Espera
+sp.crud.product.detail.wait =Detalle de Producto en Espera 
+sp.common.wait.edit=Editar Espera
+sp.common.wait.add=Agregar a Espera
+sp.common.wait.egress=Egresar de Espera
+sp.common.meteorological.edit=Editar Control Meteorologico
+sp.common.meteorological.add=Agregar a Control Meteorologico
+sp.common.meteorological.egress=Egresar de Control Meteorologico
+sp.crud.product.list.meteorological =Lista de Productos en Control Meteorologico
+sp.crud.product.detail.meteorological =Detalle de Producto en Control Meteorologico
+sp.common.meteorological.edit=Editar Espera Control Meteorologico
+sp.common.quaratine.reason=Motivo de Cuarentena
 sp.error.value.quantity=La cantidad deber menor o igual al stock
 sp.error.validate.transaction=Debe indicar serial y cantidad a egresar
 
