--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1257,6 +1257,7 @@ sp.crud.product.list.meteorological =Lista de Productos en Control Meteorologico
 sp.crud.product.detail.meteorological =Detalle de Producto en Control Meteorologico
 sp.common.meteorological.edit=Editar Espera Control Meteorologico
 sp.common.quaratine.reason=Motivo de Cuarentena
+sp.common.work.to.do=Trabajo a Realizar
 sp.error.value.quantity=La cantidad deber menor o igual al stock
 sp.error.validate.transaction=Debe indicar serial y cantidad a egresar
 
