cambios en cuarentena

--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1217,6 +1217,7 @@ sp.common.condition=Condicion
 sp.common.customer=Cliente
 sp.common.observations=Observaciones
 sp.common.date.expiration=Fecha de Vencimiento
+sp.common.date.add=Fecha de Entrada
 sp.common.departure.date=Fecha de Salida
 sp.common.date.cure=Fecha de Curado
 sp.common.serials=Seriales
