Cambios al egresar productos

--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -151,7 +151,7 @@ sp.common.endingDate=Fecha fin
 sp.common.event=Evento
 sp.common.from=Desde
 sp.common.to=Hasta
-sp.common.amount=Monto
+sp.common.amount=Precio
 sp.common.goalAmount=Monto meta
 sp.common.bonusAmount=Monto bonus
 sp.common.bonificationAmount=Monto Bonificacion
@@ -1227,7 +1227,7 @@ sp.common.work.order=Orden de Trabajo
 sp.common.transit=Transito
 sp.common.quarantine=Cuarentena
 sp.common.wait=Espera
-sp.common.meteorological=Control Meteorologico
+sp.common.meteorological=Control Metrologico
 sp.common.stock.min.error=El stock minimo no puede ser mayor al maximo
 sp.common.actions.download.pdf=Exportar PDF
 sp.crud.product.list.reporte=Reporte de Productos
@@ -1251,12 +1251,12 @@ sp.crud.product.detail.wait =Detalle de Producto en Espera
 sp.common.wait.edit=Editar Espera
 sp.common.wait.add=Agregar a Espera
 sp.common.wait.egress=Egresar de Espera
-sp.common.meteorological.edit=Editar Control Meteorologico
-sp.common.meteorological.add=Agregar a Control Meteorologico
-sp.common.meteorological.egress=Egresar de Control Meteorologico
-sp.crud.product.list.meteorological =Lista de Productos en Control Meteorologico
-sp.crud.product.detail.meteorological =Detalle de Producto en Control Meteorologico
-sp.common.meteorological.edit=Editar Espera Control Meteorologico
+sp.common.meteorological.edit=Editar Control Metrologico
+sp.common.meteorological.add=Agregar a Control Metrologico
+sp.common.meteorological.egress=Egresar de Control Metrologico
+sp.crud.product.list.meteorological =Lista de Productos en Control Metrologico
+sp.crud.product.detail.meteorological =Detalle de Producto en Control Metrologico
+sp.common.meteorological.edit=Editar Espera Control Metrologico
 sp.common.quaratine.reason=Motivo de Cuarentena
 sp.common.work.to.do=Trabajo a Realizar
 sp.error.value.quantity=La cantidad deber menor o igual al stock
