--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -2,7 +2,7 @@
 
 sp.common.page.title=CG Turbines
 sp.common.page.home=Inicio
-sp.common.page.invoice=Remito
+sp.common.page.invoice=Invoice/Remito
 sp.common.page.admin.invoice=Administrador de Factura
 sp.common.page.detail.invoice= Detalle de Factura
 sp.common.page.cancel.invoice= Factura indicada ya fue PAGADA.
