laber Control Metrologico

--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1259,6 +1259,17 @@ sp.crud.product.detail.meteorological =Detalle de Producto en Control Metrologic
 sp.common.meteorological.edit=Editar Espera Control Metrologico
 sp.common.quaratine.reason=Motivo de Cuarentena
 sp.common.work.to.do=Trabajo a Realizar
+sp.common.control.designation=Designacion
+sp.common.control.id.instrumnet=ID Instrumento
+sp.common.control.model=Marca y Modelo
+sp.common.control.serial=Numero de Serial
+sp.common.control.rank=Rango
+sp.common.control.date.calibration=Fecha de Calibracion
+sp.common.control.entity.calibration=Enter de Calibracion
+sp.common.control.due.date=Fecha de Vencimiento 
+sp.common.control.ubication=Ubicacion
+sp.common.control.minimun.scale=Escala Minima
+sp.common.control.type=Tipo
 sp.error.value.quantity=La cantidad deber menor o igual al stock
 sp.error.validate.transaction=Debe indicar serial y cantidad a egresar
 
