--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1261,7 +1261,8 @@ sp.common.quaratine.reason=Motivo de Cuarentena
 sp.common.work.to.do=Trabajo a Realizar
 sp.common.control.designation=Designacion
 sp.common.control.id.instrumnet=ID Instrumento
-sp.common.control.model=Marca y Modelo
+sp.common.control.model=Modelo
+sp.common.control.braund=Marca
 sp.common.control.serial=Numero de Serial
 sp.common.control.rank=Rango
 sp.common.control.date.calibration=Fecha de Calibracion
