cambios control metrologico

--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1254,7 +1254,7 @@ sp.common.wait.egress=Egresar de Espera
 sp.common.meteorological.edit=Editar Control Metrologico
 sp.common.meteorological.add=Agregar a Control Metrologico
 sp.common.meteorological.egress=Egresar de Control Metrologico
-sp.crud.product.list.meteorological =Lista de Productos en Control Metrologico
+sp.crud.product.list.meteorological=Lista de Control Metrologico
 sp.crud.product.detail.meteorological =Detalle de Producto en Control Metrologico
 sp.common.meteorological.edit=Editar Espera Control Metrologico
 sp.common.quaratine.reason=Motivo de Cuarentena
@@ -1281,6 +1281,18 @@ sp.munitoring.expirate.min.stock=Stock minimo
 sp.munitoring.expirate.day=Dias para vencer
 sp.munitoring=Monitoreo
 
+sp.crud.braund.list=Listado de Marcas
+sp.crud.braund.data=Datos de la Marca
+sp.crud.braund.add=Agregar Marca
+sp.crud.braund.edit=Editar Marca
+sp.crud.braund.view=Ver Marca
+sp.crud.model.list=Lista de Modelos
+sp.crud.model.data=Datos del Modelo
+sp.crud.model.add=Agregar Modelo
+sp.crud.model.edit=Editar Modelo
+sp.crud.model.view=Ver Modelo
 
+sp.common.braund.name=Marca
+sp.common.model.name=Modelo
 
-
+sp.crud.metrological.control.list.reporte=Reporte de Control Metrologico
