agregar ente de calibracion

--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1,19 +1,19 @@
 # COMMONS
 
-sp.common.page.title=CG Turbines
+sp.common.page.title=CG Turbines SRL
 sp.common.page.home=Inicio
-sp.common.page.invoice=Invoice/Remito
+sp.common.page.invoice=Remito/Invoice
 sp.common.page.admin.invoice=Administrador de Factura
 sp.common.page.detail.invoice= Detalle de Factura
 sp.common.page.cancel.invoice= Factura indicada ya fue PAGADA.
 sp.common.page.siteMap=Mapa del sitio
 sp.common.page.terms=Terminos y condiciones
 sp.common.page.about=Sobre nosotros
-sp.common.page.copyright=Copyright 2019 - CG TURBINES C.A. All rights reserved.
-sp.common.page.copyright1=Copyright 2019 -CG TURBINES C.A.
+sp.common.page.copyright=Copyright 2019 - CG Turbines SRL Todos los derechos reservados.
+sp.common.page.copyright1=Copyright 2019 -CG Turbines SRL
 sp.common.page.copyright2=Todos los derechos reservados.
 sp.common.page.powerby=Desarrollado por
-sp.common.page.alodiga=CG TURBINES
+sp.common.page.alodiga=CG Turbines SRL
 sp.common.myStatistics=Mis Estadisticas
 sp.common.printableInvoice=Imprimible
 sp.common.close=Cerrar
@@ -151,7 +151,7 @@ sp.common.endingDate=Fecha fin
 sp.common.event=Evento
 sp.common.from=Desde
 sp.common.to=Hasta
-sp.common.amount=Precio
+sp.common.amount=Precio FOB Cif
 sp.common.goalAmount=Monto meta
 sp.common.bonusAmount=Monto bonus
 sp.common.bonificationAmount=Monto Bonificacion
@@ -1095,7 +1095,7 @@ sp.fileExcel.selectedOneFile=Debe selecionar al solo un archivo
 sp.fileExcel.nameProvider=Proveedor
 sp.fileExcel.commission1=Comision
 sp.fileExcel.selectProfile=Seleccione el perfil
-sp.file.commission.topUp.letterHead1=CG Turbines
+sp.file.commission.topUp.letterHead1=CG Turbines SRL
 sp.file.commission.topUp.letterHead2=Comisiones de Recarga de moviles nacionales e internacionales
 sp.file.commission.topUp.letterHead3=Alodiga Mejora tu vida
 
@@ -1199,11 +1199,11 @@ sp.crud.ipBlackList.exit= Ya existe la Ip
 #product
 sp.common.PartNumber= Numero de Parte
 sp.common.descripton= Descripcion
-sp.common.amount= Monto 
+sp.common.amount=Precio FOB Cif 
 sp.common.stockMin=Stock Minimo
 sp.common.stockMax=Stock Maximo
 sp.common.status=Status
-sp.common.actNpNsn=actNpNsn
+sp.common.actNpNsn=ALT PN/NSN
 sp.common.ubicationBox=Ubicacion de caja
 sp.common.ubicationFolder=Ubicacion en carpeta
 sp.common.inictialAmount=Monto Inicial
@@ -1266,7 +1266,7 @@ sp.common.control.braund=Marca
 sp.common.control.serial=Numero de Serial
 sp.common.control.rank=Rango
 sp.common.control.date.calibration=Fecha de Calibracion
-sp.common.control.entity.calibration=Enter de Calibracion
+sp.common.control.entity.calibration=Ente de Calibracion
 sp.common.control.due.date=Fecha de Vencimiento 
 sp.common.control.ubication=Ubicacion
 sp.common.control.minimun.scale=Escala Minima
@@ -1291,8 +1291,14 @@ sp.crud.model.data=Datos del Modelo
 sp.crud.model.add=Agregar Modelo
 sp.crud.model.edit=Editar Modelo
 sp.crud.model.view=Ver Modelo
+sp.crud.enter.list=Listado de Entes de Calibracion
+sp.crud.enter.data=Datos del Ente de Calibracion
+sp.crud.enter.add=Agregar Ente de Calibracion
+sp.crud.enter.edit=Editar Ente de Calibracion
+sp.crud.enter.view=Ver Ente de Calibracion
 
 sp.common.braund.name=Marca
 sp.common.model.name=Modelo
+sp.common.enter.name=Ente de Calibracion
 
 sp.crud.metrological.control.list.reporte=Reporte de Control Metrologico
