crear proceso automatico

--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1302,3 +1302,8 @@ sp.common.model.name=Modelo
 sp.common.enter.name=Ente de Calibracion
 
 sp.crud.metrological.control.list.reporte=Reporte de Control Metrologico
+sp.common.dni=DNI/CUIL
+
+sp.automatic.service.stock.update=Actualizar Stock, Cuarentena y Control Metrologico
+sp.automatic.service.stock.update.description=Valida fechas de vencimiento 
+sp.automatic.service.options=Opciones
