--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1227,6 +1227,8 @@ sp.common.work.order=Orden de Trabajo
 sp.common.transit=Transito
 sp.common.quarantine=Cuarentena
 sp.common.wait=Espera
+sp.common.form=Forma
+sp.common.clear=Borrar
 sp.common.meteorological=Control Metrologico
 sp.common.stock.min.error=El stock minimo no puede ser mayor al maximo
 sp.common.actions.download.pdf=Exportar PDF
