--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -677,7 +677,8 @@ sp.error.enteprise.notSelected=Debe seleccionar una empresa.
 sp.error.level.notSelected=Debe seleccionar un nivel.
 sp.error.purchase.balance.zero=Debe configurar al menos un saldo de producto mayor que cero (0)
 sp.error.declined.creditCard= Tarjeta de Credito Declinada
-sp.error.fileupload.invalid.file=El formato o nombre del archivo es inv\u00e1lido
+sp.error.fileupload.invalid.format=El formato del archivo es inv\u00e1lido
+sp.error.fileupload.invalid.file=El archivo es inv\u00e1lido
 
 
 #MENUS
