--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -80,6 +80,7 @@ sp.common.actions.continue=Continuar
 sp.common.actions.proccess=Procesar
 sp.common.actions.search=Buscar
 sp.common.actions.search.filter.tooltip=Buscar usando filtros
+sp.common.actions.remove.customer.tooltip=Remover Cliente
 sp.common.actions.force = Forzar Facturacion
 sp.common.actions.download=Descargar
 sp.common.actions.download.tooltip=Descargar reporte
