--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1264,9 +1264,10 @@ sp.common.meteorological.edit=Editar Espera Control Metrologico
 sp.common.quaratine.reason=Motivo de Cuarentena
 sp.common.work.to.do=Trabajo a Realizar
 sp.common.control.designation=Designacion
-sp.common.control.id.instrumnet=ID Instrumento
+sp.common.control.id.instrument=ID Instrumento
 sp.common.control.model=Modelo
 sp.common.control.braund=Marca
+sp.common.control.braund.model=Marca y Modelo
 sp.common.control.serial=Numero de Serial
 sp.common.control.rank=Rango
 sp.common.control.date.calibration=Fecha de Calibracion
