--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -70,6 +70,8 @@ sp.common.actions.add=Agregar
 sp.common.actions.egress=Egresar
 sp.common.actions.add.tooltip=Agregar nuevo registro
 sp.common.actions.delete=Eliminar
+sp.common.actions.delete.confirm=Confirmar
+sp.common.actions.delete.question=¿Estas seguro de que deseas eliminar este registro?
 sp.common.actions.remove=Egresos
 sp.common.actions.income=Ingresos
 sp.common.actions.save=Guardar
@@ -681,6 +683,7 @@ sp.error.purchase.balance.zero=Debe configurar al menos un saldo de producto may
 sp.error.declined.creditCard= Tarjeta de Credito Declinada
 sp.error.fileupload.invalid.format=El formato del archivo es inv\u00e1lido
 sp.error.fileupload.invalid.file=El archivo es inv\u00e1lido
+sp.error.part.number.exist=Numero de Parte Registrado
 
 
 #MENUS
