--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -111,6 +111,7 @@ sp.common.provider=Proveedor
 sp.common.integrationType=Tipo de Integracion
 sp.common.taxInclude=Incluye impuestos
 sp.common.status=Estatus
+sp.common.active=Activo
 sp.common.referenceCode=Codigo de referencia
 sp.common.urlRates=URL Tarifas
 sp.common.urlAccessNumbers=URL Numeros de Acceso
