--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -398,6 +398,8 @@ sp.common.ejbChecker.good=Ejbs con referencia
 sp.common.ejbChecker.bad=Ejbs si referencia
 sp.common.tooltip.add=Puede aggregar hasta 10 pinfrees haciendo click o presionando la tecla ENTER.
 sp.common.max45= Max 45
+sp.common.max75= Max 75
+sp.common.max150= Max 150
 sp.common.max255= Max 255
 sp.common.max140= Caracteres disponibles 140
 sp.common.max500= Caracteres disponibles 500
@@ -1240,6 +1242,10 @@ sp.common.meteorological=Control Metrologico
 sp.common.stock.min.error=El stock minimo no puede ser mayor al maximo
 sp.common.actions.download.pdf=Exportar PDF
 sp.crud.product.list.reporte=Reporte de Productos
+sp.crud.product.list.reporte.stock=Reporte de Productos en Stock
+sp.crud.product.list.reporte.quarantine=Reporte de Productos en Cuarentena
+sp.crud.product.list.reporte.wait=Reporte de Productos en Espera
+sp.crud.product.list.reporte.transit=Reporte de Productos en Transito
 sp.crud.product.list.stock =Lista de Productos en Stock
 sp.crud.product.detail.stock =Detalle de Producto en Stock 
 sp.common.stock.edit=Editar Stock
@@ -1314,6 +1320,7 @@ sp.common.enter.name=Ente de Calibracion
 sp.crud.metrological.control.list.reporte=Reporte de Control Metrologico
 sp.common.dni=DNI/CUIL
 
-sp.automatic.service.stock.update=Actualizar Stock, Cuarentena y Control Metrologico
+sp.automatic.service.stock.update=Actualizar Stock y Cuarentena
+sp.automatic.service.control.update=Actualizar Cuarentena y Control Metrologico
 sp.automatic.service.stock.update.description=Valida fechas de vencimiento 
 sp.automatic.service.options=Opciones
