--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -597,6 +597,7 @@ sp.error.login.exist=Ya existe una cuenta con este login.
 sp.error.email.exist=Ya existe una cuenta con este email.
 sp.error.products.notSelected=Debe seleccionar al menos un producto.
 sp.error.providers.notSelected=Debe seleccionar al menos un proveedor.
+sp.error.customer.notSelected=Debe seleccionar al menos un cliente.
 sp.error.accountType.notSelected=Debe seleccionar el Tipo de Cuenta
 sp.error.tinType.notSelected.single=Debe seleccionar el Tipo de Identificacion
 sp.error.gender.notSelected=Debe seleccionar al menos un genero.
