--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -688,7 +688,7 @@ sp.error.declined.creditCard= Tarjeta de Credito Declinada
 sp.error.fileupload.invalid.format=El formato del archivo es inv\u00e1lido
 sp.error.fileupload.invalid.file=El archivo es inv\u00e1lido
 sp.error.part.number.exist=Numero de Parte Registrado
-
+sp.error.instrument.exist=ID Instrumento ya registrado
 
 #MENUS
 
