--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -1237,6 +1237,8 @@ sp.common.work.order=Orden de Trabajo
 sp.common.transit=Transito
 sp.common.quarantine=Cuarentena
 sp.common.wait=Espera
+sp.common.entry=Entrada
+sp.common.exit=Salida
 sp.common.form=Forma
 sp.common.clear=Borrar
 sp.common.meteorological=Control Metrologico
