--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -44,7 +44,7 @@ sp.common.fullName=Nombre completo
 sp.common.date=Fecha
 sp.common.enabled=Activo
 sp.common.disabled=Inactivo
-sp.common.creationDate=Fecha de creacion
+sp.common.creationDate=Fecha de Entrada
 sp.common.email=Email
 sp.common.gender=Genero
 sp.common.birthday=Fecha de Nacimiento
