--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -153,6 +153,12 @@ sp.common.save.success=Guardado Exitosamente
 sp.common.beginningDate=Fecha inicio
 sp.common.responseDate=Fecha respuesta
 sp.common.endingDate=Fecha fin
+sp.common.beginningDate.Exit=Fecha de Salida desde
+sp.common.endingDate.Exit=hasta
+sp.common.beginningDate.control=Fecha de Vencimiento desde
+sp.common.endingDate.control=hasta
+sp.common.beginningDate.calibration=Fecha de Calibracion desde
+sp.common.endingDate.calibration=hasta
 sp.common.event=Evento
 sp.common.from=Desde
 sp.common.to=Hasta
