--- a/WebContent/WEB-INF/i3-label_es.properties
+++ b/WebContent/WEB-INF/i3-label_es.properties
@@ -496,6 +496,8 @@ sp.crud.profile.permission.entity=Entidad
 sp.crud.enterprise.admin=Administracion de Empresa
 sp.crud.enterprise.list=Listado de Empresas
 sp.crud.enterprise.add=Agregar Empresa
+sp.crud.enterprise.add.email=Agregar Email
+sp.crud.enterprise.added.email=Emails Agregados
 sp.crud.enterprise.edit=Editar empresa
 sp.crud.enterprise.view=Ver empresa
 sp.crud.user.list=Listado de Usuarios
